--- a/admin/surat-keluar.html
+++ b/admin/surat-keluar.html
@@ -267,9 +267,9 @@
                                                     <div class="card-body">
                                                         <div class="float-left">
                                                             <p>
-                                                                <a href=form-add-surat-keluar.html>
+                                                                <!-- <a href=form-add-surat-keluar.html>
                                                                     <button type="button" class="btn btn-info btn-sm">Tambah Data</button></p>
-                                                                </a>
+                                                                </a> -->
                                                                 </div>
                                                             
                                                                     <table class="table" >
@@ -296,6 +296,9 @@
                                                                             &nbsp
                                                                              <a href=detail-surat-keluar.html
                                                                             <button type="button" class="btn-warning">Detail</button></a>
+                                                                            &nbsp
+                                                                             <a href=detail-surat-keluar.html
+                                                                            <button type="button" class="btn-info">Kirim</button></a>
                                                                         </td>
                                                                             </tr>
                                                                             <tr>
@@ -311,6 +314,9 @@
                                                                             &nbsp
                                                                              <a href=detail-surat-keluar.html
                                                                             <button type="button" class="btn-warning">Detail</button></a>
+                                                                            &nbsp
+                                                                             <a href=detail-surat-keluar.html
+                                                                            <button type="button" class="btn-info">Kirim</button></a>
                                                                             </tr>
                                                                         </tbody>
                                                                     </table>
