--- a/admin/surat-masuk.html
+++ b/admin/surat-masuk.html
@@ -266,10 +266,10 @@
                                                 <div class="card m-b-30">
                                                     <div class="card-body">
                                                         <div class="float-left">
-                                                            <p>
+                                                            <!-- <p>
                                                                 <a href=form-add-surat-masuk.html>
-                                                                    <button type="button" class="btn btn-info btn-sm">Tambah Data</button></p>
-                                                                </a>
+                                                                    <button type="button" class="btn btn-info btn-sm">Tambah Disposisi</button></p>
+                                                                </a> -->
                                                             </div>
                                                                 <table class="table">
                                                                     <thead>
@@ -297,6 +297,9 @@
                                                                             &nbsp
                                                                              <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
+                                                                            &nbsp
+                                                                             <a href=detail-surat-masuk.html>
+                                                                            <button type="button" class="btn-info">Disposisi</button></a>
                                                                         </td>
                                                                         </tr>
                                                                         <tr>
@@ -313,6 +316,9 @@
                                                                             &nbsp
                                                                             <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
+                                                                            &nbsp
+                                                                             <a href=detail-surat-masuk.html>
+                                                                            <button type="button" class="btn-info">Disposisi</button></a>
                                                                         </td>
                                                                         </tr>
                                                                         <tr>
@@ -328,6 +334,9 @@
                                                                             <button type="button" class="btn-danger">Hapus</button></a>&nbsp
                                                                             <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
+                                                                            &nbsp
+                                                                             <a href=detail-surat-masuk.html>
+                                                                            <button type="button" class="btn-info">Disposisi</button></a>
                                                                         </td>
                                                                         </tr>
                                                                         <tr>
@@ -344,6 +353,9 @@
                                                                             &nbsp
                                                                             <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
+                                                                            &nbsp
+                                                                             <a href=detail-surat-masuk.html>
+                                                                            <button type="button" class="btn-info">Disposisi</button></a>
                                                                         </td>
                                                                         </tr>
                                                                     </tbody>
