--- a/admin/detail-surat-masuk.html
+++ b/admin/detail-surat-masuk.html
@@ -229,63 +229,62 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-12">
+                                        <div class="col-10">
                                             <div class="card m-b-30">
                                                 <div class="card-body">
                                                     <div class="form-group row">
-                                                        <label for="example-number-input"class="col-sm-2
+                                                        <label for="example-number-input"class="col-sm-4
                                                         col-form-label">No. Surat</label>
-                                                        <div class="col-sm-10">
-                                                            <label for="example-number-input"class="col-sm-2
+                                                        <div class="col-sm-8">
+                                                            <label for="example-number-input"class="col-sm-6
                                                             col-form-label">SR-121</label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <label for="example-number-input"class="col-sm-2
+                                                        <label for="example-number-input"class="col-sm-4
                                                         col-form-label">Tanggal Surat</label>
-                                                        <div class="col-sm-10">
-                                                            <label for="example-number-input"class="col-sm-2
+                                                        <div class="col-sm-8">
+                                                            <label for="example-number-input"class="col-sm-7
                                                             col-form-label">01 Oktober 2021</label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <label for="example-number-input"class="col-sm-2
+                                                        <label for="example-number-input"class="col-sm-4
                                                         col-form-label">Tanggal Terima</label>
-                                                        <div class="col-sm-10">
-                                                            <label for="example-number-input"class="col-sm-2
+                                                        <div class="col-sm-8">
+                                                            <label for="example-number-input"class="col-sm-7
                                                             col-form-label">04 Oktober 2021</label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <label for="example-number-input"class="col-sm-2
+                                                        <label for="example-number-input"class="col-sm-4
                                                         col-form-label">Asal Surat</label>
-                                                        <div class="col-sm-10">
-                                                            <label for="example-number-input"class="col-sm-2
+                                                        <div class="col-sm-8">
+                                                            <label for="example-number-input"class="col-sm-8
                                                             col-form-label">Politeknik Negeri Jember</label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <label for="example-number-input"class="col-sm-2
+                                                        <label for="example-number-input"class="col-sm-4
                                                         col-form-label">Ditujukan Kepada</label>
-                                                        <div class="col-sm-10">
-                                                            <label for="example-number-input"class="col-sm-2
+                                                        <div class="col-sm-8">
+                                                            <label for="example-number-input"class="col-sm-7
                                                             col-form-label">Divisi HRD</label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <label for="example-number-input"class="col-sm-2
+                                                        <label for="example-number-input"class="col-sm-4
                                                         col-form-label">Perihal</label>
-                                                        <div class="col-sm-10">
-                                                            <label for="example-number-input"class="col-sm-2
+                                                        <div class="col-sm-8">
+                                                            <label for="example-number-input"class="col-sm-7
                                                             col-form-label">Perizinan lokasi PKL</label>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
-                                                        <label class="col-sm-2
+                                                        <label class="col-sm-4
                                                         col-form-label"for="example-input1-group2">File</label>
-                                                        <div class="col-sm-10">
-                                                            <a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing"><label for="example-number-input"class="col-sm-2
-                                                                col-form-label">PKL.pdf</label></a>
+                                                        <div class="col-sm-8">
+                                                            <iframe src="contoh.pdf" width="500" height="300"></iframe>
                                                             </div>
                                                         </div>
                                                         <div class="form-group row">
