--- a/pimpinan/dashboard.html
+++ b/pimpinan/dashboard.html
@@ -259,18 +259,60 @@
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
+                                            <i class="mdi mdi-briefcase-check"></i>
+                                        </div>
+                                        <div class="p-4">
+                                            <h6 class="text-uppercase mb-3">Disetujui</h6>
+                                            <h4 class="mb-0">10<small class="ml-2"></small></h4>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-12 col-xl-3">
+                                    <div class="card mini-stat">
+                                        <div class="mini-stat-icon text-right">
                                             <i class="mdi mdi-tag-text-outline"></i>
                                         </div>
                                         <div class="p-4">
-                                            <h6 class="text-uppercase mb-3">Data Arsip</h6>
-                                            <h4 class="mb-0">9<small class="ml-2"></small></h4>
+                                            <h6 class="text-uppercase mb-3">Belum Disetujui</h6>
+                                            <h4 class="mb-0">5<small class="ml-2"></small></h4>
                                         </div>
                                     </div>
                                 </div>
                                 
 
-                                </div>                                            
                             </div><!-- end row -->
+                            <div class="row">
+                                <div class="col-md-12 col-xl-3">
+                                    <div class="card mini-stat">
+                                        <div class="mini-stat-icon text-right">
+                                            <i class="mdi mdi-cube-outline"></i>
+                                        </div>
+                                        <div class="p-4">
+                                            <h6 class="text-uppercase mb-3">Data Arsip</h6>
+                                            <h4 class="mb-0">10<small class="ml-2"></small></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        <div class="row">
+                                <div class="col-md-12 col-xl-8">
+                                    <div class="card">
+                                        <div class="card-body">   
+                                            <h4 class="mt-0 mb-3 header-title">Dokumen</h4>        
+                                            <div id="morris-area-chart" style="height: 340px;"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-xl-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h4 class="mt-0 mb-3 header-title">Arsip</h4> 
+                                            <div id="morris-donut-example" style="height: 340px;"></div>
+                                        </div>
+                                    </div>
+                                </div> 
+                            </div>
 
 
                 <footer class="footer">
