--- a/pimpinan/lihat-suratkeluar.html
+++ b/pimpinan/lihat-suratkeluar.html
@@ -247,7 +247,8 @@
                                                                     <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-4 col-form-label">No Surat</label>
                                                 <div class="col-sm-8">
-                                                    <input class="form-control" type="text" value="SR-121" id="example-text-input" disabled>
+                                                    <input class="form-control" type="text" value="SR-121" id="example-text-input" disabled
+                                                    >
                                                 </div>
                                             </div>
 
