--- a/admin/surat-masuk.html
+++ b/admin/surat-masuk.html
@@ -73,7 +73,7 @@
                                 <ul class="list-unstyled">
                                     <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                     <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                    <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
+                                    <li><a href="disposisi.html">Disposisi</a></li>
                                 </ul>
                             </li>
 
@@ -266,12 +266,15 @@
                                                 <div class="card m-b-30">
                                                     <div class="card-body">
                                                         <div class="float-left">
-                                                            <!-- <p>
-                                                                <a href=form-add-surat-masuk.html>
-                                                                    <button type="button" class="btn btn-info btn-sm">Tambah Disposisi</button></p>
-                                                                </a> -->
+                                                            <p>
+                                                                <a href=form-add-disposisi.html>
+                                                                    <button type="button" class="btn btn-info btn-sm">+ Disposisi</button></p>
+                                                                </a>
                                                             </div>
-                                                                <table class="table">
+                                                                <!-- <table class="table"> -->
+            
+                                            <table id="datatable" class="table table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+
                                                                     <thead>
                                                                         <tr>
                                                                             <th>No</th>
@@ -280,6 +283,7 @@
                                                                             <th>Tanggal Terima</th>
                                                                             <th>Asal Surat</th>
                                                                             <th>Aksi</th>
+                                                                            <th>Status</th>
                                                                         </tr>
                                                                     </thead>
                                                                     <tbody>
@@ -297,9 +301,10 @@
                                                                             &nbsp
                                                                              <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
+                                                                        </td>
+                                                                        <td><a href="" class="fa fa-check"></a>
                                                                             &nbsp
-                                                                             <a href=detail-surat-masuk.html>
-                                                                            <button type="button" class="btn-info">Disposisi</button></a>
+                                                                            <a href="" class="fa fa-times"></a>
                                                                         </td>
                                                                         </tr>
                                                                         <tr>
@@ -316,9 +321,10 @@
                                                                             &nbsp
                                                                             <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
+                                                                        </td>
+                                                                        <td><a href="" class="fa fa-check"></a>
                                                                             &nbsp
-                                                                             <a href=detail-surat-masuk.html>
-                                                                            <button type="button" class="btn-info">Disposisi</button></a>
+                                                                            <a href="" class="fa fa-times"></a>
                                                                         </td>
                                                                         </tr>
                                                                         <tr>
@@ -334,9 +340,9 @@
                                                                             <button type="button" class="btn-danger">Hapus</button></a>&nbsp
                                                                             <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
+                                                                            <td><a href="" class="fa fa-check"></a>
                                                                             &nbsp
-                                                                             <a href=detail-surat-masuk.html>
-                                                                            <button type="button" class="btn-info">Disposisi</button></a>
+                                                                            <a href="" class="fa fa-times"></a>
                                                                         </td>
                                                                         </tr>
                                                                         <tr>
@@ -353,9 +359,10 @@
                                                                             &nbsp
                                                                             <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
+                                                                        </td>
+                                                                        <td><a href="" class="fa fa-check"></a>
                                                                             &nbsp
-                                                                             <a href=detail-surat-masuk.html>
-                                                                            <button type="button" class="btn-info">Disposisi</button></a>
+                                                                            <a href="" class="fa fa-times"></a>
                                                                         </td>
                                                                         </tr>
                                                                     </tbody>
