--- a/admin/detail-surat-masuk.html
+++ b/admin/detail-surat-masuk.html
@@ -72,9 +72,40 @@
                                 class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                                 <ul class="list-unstyled">
                                     <li><a href="surat-masuk.html">Surat Masuk</a></li>
-                                    <!-- <li><a href="surat-keluar.html">Surat Keluar</a></li> -->
+                                    <li><a href="surat-keluar.html">Surat Keluar</a></li>
+                                    <li><a href="disposisi.html">Disposisi</a></li>
                                 </ul>
                             </li>
+
+                            <li class="has_sub">
+                            </li>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="divisi-divisi.html" class="waves-effect waves-light"><i class="mdi mdi-division-box"></i><span> Data Divisi </span></a>
+                    </li>
+
+                    <li class="has_sub">
+                    </li>
+                </a>
+            </li>
+
+            <li>
+                <a href="pengguna-pengguna.html" class="waves-effect waves-light"><i class="mdi mdi-folder-account"></i><span> Data Pengguna </span></a>
+            </li>
+
+            <li class="has_sub">
+            </li>
+        </a>
+    </li>
+
+                        <!-- <li>
+                                <a href="laporan.html" class="waves-effect waves-light"><i
+                                    class="mdi mdi-library-books"></i><span> Laporan Disposisi </span></a>
+                                </li> -->
+
+                            </ul>
                         </div>
                         <div class="clearfix"></div>
                     </div> <!-- end sidebarinner -->
@@ -189,35 +220,37 @@
                                             </div>
                                             <a class="dropdown-item" href="profile.html"><i class="mdi mdi-account-circle "></i>
                                             Profile</a>
+                                            <a class="dropdown-item" href="#"><span
+                                                class="badge badge-primary float-right">3</span><i
+                                                class="mdi mdi-settings "></i> Settings</a>
+                                                <a class="dropdown-item" href="#"><i class="mdi mdi-lock-open-outline"></i> Lock
+                                                screen</a>
+                                                <div class="dropdown-divider"></div>
+                                                <a class="dropdown-item text-danger" href="#"><i
+                                                    class="mdi mdi-power text-danger"></i> Logout</a>
+                                                </div>
+                                            </li>
+                                        </ul>
 
-                                            <a class="dropdown-item" href="#"><i class="mdi mdi-lock-open-outline"></i> Lock
-                                            screen</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item text-danger" href="#"><i
-                                                class="mdi mdi-power text-danger"></i> Logout</a>
-                                            </div>
-                                        </li>
-                                    </ul>
-
-                                    <ul class="list-inline menu-left mb-0">
-                                        <li class="float-left">
-                                            <button class="button-menu-mobile open-left waves-light waves-effect">
-                                                <i class="mdi mdi-menu"></i>
-                                            </button>
-                                        </li>
-                                        <li class="hide-phone app-search">
-                                            <form role="search" class="">
-                                                <input type="text" placeholder="Search..." class="form-control">
-                                                <a href=""><i class="fa fa-search"></i></a>
-                                            </form>
-                                        </li>
-                                    </ul>
-                                    <div class="clearfix"></div>
-                                </nav>
-                            </div>
-                            <!-- Top Bar End -->
-                            <!-- end page title end breadcrumb -->
-                            <div class="page-content-wrapper">
+                                        <ul class="list-inline menu-left mb-0">
+                                            <li class="float-left">
+                                                <button class="button-menu-mobile open-left waves-light waves-effect">
+                                                    <i class="mdi mdi-menu"></i>
+                                                </button>
+                                            </li>
+                                            <li class="hide-phone app-search">
+                                                <form role="search" class="">
+                                                    <input type="text" placeholder="Search..." class="form-control">
+                                                    <a href=""><i class="fa fa-search"></i></a>
+                                                </form>
+                                            </li>
+                                        </ul>
+                                        <div class="clearfix"></div>
+                                    </nav>
+                                </div>
+                                <!-- Top Bar End -->
+                                <!-- end page title end breadcrumb -->
+                                <div class="page-content-wrapper">
 
                                 <div class="container-fluid">
                                     <!-- end page title end breadcrumb -->
@@ -236,48 +269,42 @@
                                                         <label for="example-number-input"class="col-sm-4
                                                         col-form-label">No. Surat</label>
                                                         <div class="col-sm-8">
-                                                            <label for="example-number-input"class="col-sm-6
-                                                            col-form-label">SR-121</label>
+                                                            <input class="form-control" type="varchar"  value="SR-121" disabled>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
                                                         <label for="example-number-input"class="col-sm-4
                                                         col-form-label">Tanggal Surat</label>
                                                         <div class="col-sm-8">
-                                                            <label for="example-number-input"class="col-sm-7
-                                                            col-form-label">01 Oktober 2021</label>
+                                                            <input class="form-control" type="varchar"  value="01 Oktober 2021" disabled>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
                                                         <label for="example-number-input"class="col-sm-4
                                                         col-form-label">Tanggal Terima</label>
                                                         <div class="col-sm-8">
-                                                            <label for="example-number-input"class="col-sm-7
-                                                            col-form-label">04 Oktober 2021</label>
+                                                            <input class="form-control" type="varchar"  value="04 Oktober 2021" disabled>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
                                                         <label for="example-number-input"class="col-sm-4
                                                         col-form-label">Asal Surat</label>
                                                         <div class="col-sm-8">
-                                                            <label for="example-number-input"class="col-sm-8
-                                                            col-form-label">Politeknik Negeri Jember</label>
+                                                            <input class="form-control" type="varchar"  value="Politeknik Negeri Jember" disabled>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
                                                         <label for="example-number-input"class="col-sm-4
-                                                        col-form-label">Ditujukan Kepada</label>
+                                                        col-form-label">Tujuan</label>
                                                         <div class="col-sm-8">
-                                                            <label for="example-number-input"class="col-sm-7
-                                                            col-form-label">Divisi HRD</label>
+                                                            <input class="form-control" type="varchar"  value="Divisi HRD" disabled>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
                                                         <label for="example-number-input"class="col-sm-4
                                                         col-form-label">Perihal</label>
                                                         <div class="col-sm-8">
-                                                            <label for="example-number-input"class="col-sm-7
-                                                            col-form-label">Perizinan lokasi PKL</label>
+                                                            <input class="form-control" type="varchar"  value="Perizinan lokasi PKL" disabled>
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
@@ -306,15 +333,6 @@
                                                     </div>
                                                 </div> <!-- end col -->
                                             </div> <!-- end row -->
-
-
-                                        </div><!-- container -->
-
-                                    </div> <!-- Page content Wrapper -->
-
-                                </div><!-- container -->
-
-                            </div> <!-- Page content Wrapper -->
 
                         </div> <!-- content -->
                         <footer class="footer">
