--- a/admin/disposisi.html
+++ b/admin/disposisi.html
@@ -290,10 +290,10 @@
                                                                             <td>SR-121</td>
                                                                             <td>1 Oktober 2021</td>
                                                                             <td>Politeknik Negeri Jember</td>
-                                                                             <td><a href=update-surat-masuk.html>
+                                                                             <td><a href=update-disposisi.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
-                                                                        <a href=surat-masuk.html>
+                                                                        <a href=update-disposisi.html>
                                                                             <button type="button" class="btn-danger">Hapus</button></a>
                                                                             &nbsp
                                                                              <a href=detail-disposisi.html>
@@ -305,13 +305,13 @@
                                                                             <td>SR-122</td>
                                                                             <td>4 Oktober 2021</td>
                                                                             <td>Tokopedia</td>
-                                                                             <td><a href=update-surat-masuk.html>
+                                                                             <td><a href=update-disposisi.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
-                                                                        <a href=surat-masuk.html>
+                                                                        <a href=disposisi.html>
                                                                             <button type="button" class="btn-danger">Hapus</button></a>
                                                                             &nbsp
-                                                                            <a href=detail-surat-masuk.html>
+                                                                            <a href=detail-disposisi.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
                                                                         </td>
                                                                         </tr>
@@ -320,12 +320,12 @@
                                                                             <td>SR-123</td>
                                                                             <td>4 Oktober 2021</td>
                                                                             <td>Lazada</td>
-                                                                             <td><a href=update-surat-masuk.html>
+                                                                             <td><a href=update-disposisi.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
-                                                                        <a href=surat-masuk.html>
+                                                                        <a href=disposisi.html>
                                                                             <button type="button" class="btn-danger">Hapus</button></a>&nbsp
-                                                                            <a href=detail-surat-masuk.html>
+                                                                            <a href=detail-disposisi.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
 
                                                                         </tr>
@@ -334,13 +334,13 @@
                                                                             <td>SR-124</td>
                                                                             <td>4 Oktober 2021</td>
                                                                             <td>Shopee</td>
-                                                                             <td><a href=update-surat-masuk.html>
+                                                                             <td><a href=update-disposisi.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
-                                                                        <a href=surat-masuk.html>
+                                                                        <a href=disposisi.html>
                                                                             <button type="button" class="btn-danger">Hapus</button></a>
                                                                             &nbsp
-                                                                            <a href=detail-surat-masuk.html>
+                                                                            <a href=detail-disposisi.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
                                                                         </td>
                                                                         </tr>
