--- a/admin/divisi-divisi.html
+++ b/admin/divisi-divisi.html
@@ -73,7 +73,7 @@
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                 <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
+                                <li><a href="disposisi.html">Disposisi</a></li>
                             </ul>
                         </li>
 
@@ -283,20 +283,20 @@
                                                     <tr>
                                                         <td>1</td>
                                                         <td>Marketing</td>
-                                                        <td><a href=update-divisi.html
+                                                        <td><a href=update-divisi.html>
                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                         &nbsp
-                                                        <a href=divisi-divisi.html
+                                                        <a href=divisi-divisi.html>
                                                         <button type="button" class="btn-danger">Hapus</button></a>
                                                     </td>
                                                     </tr>
                                                     <tr>
                                                         <td>2</td>
                                                         <td>HRD</td>
-                                                        <td><a href=update-divisi.html
+                                                        <td><a href=update-divisi.html>
                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                         &nbsp
-                                                        <a href=divisi-divisi.html
+                                                        <a href=divisi-divisi.html>
                                                         <button type="button" class="btn-danger">Hapus</button></a>
                                                     </td>
                                                     </tr>
