--- a/admin/form-add-data-arsip.html
+++ b/admin/form-add-data-arsip.html
@@ -72,7 +72,7 @@
                                 <ul class="list-unstyled">
                                     <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                     <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                    <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
+                                    <li><a href="disposisi.html">Disposisi</a></li>
                                 </ul>
                             </li>
 
