--- a/admin/surat-keluar.html
+++ b/admin/surat-keluar.html
@@ -73,7 +73,7 @@
                                 <ul class="list-unstyled">
                                     <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                     <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                    <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
+                                    <li><a href="disposisi.html">Disposisi</a></li>
                                 </ul>
                             </li>
 
@@ -267,9 +267,9 @@
                                                     <div class="card-body">
                                                         <div class="float-left">
                                                             <p>
-                                                                <!-- <a href=form-add-surat-keluar.html>
-                                                                    <button type="button" class="btn btn-info btn-sm">Tambah Data</button></p>
-                                                                </a> -->
+                                                                <a href=#>
+                                                                    <button type="button" class="btn btn-info btn-sm">Teruskan</button></p>
+                                                                </a>
                                                                 </div>
                                                             
                                                                     <table class="table" >
@@ -288,17 +288,14 @@
                                                                                 <td>SR-131</td>
                                                                                 <td>5 Oktober 2021</td>
                                                                                 <td>Politeknik Negeri Jember</td>
-                                                                                 <td><a href=update-surat-keluar.html
+                                                                                 <td><a href=update-surat-keluar.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
-                                                                        <a href=surat-keluar.html
+                                                                        <a href=surat-keluar.html>
                                                                             <button type="button" class="btn-danger">Hapus</button></a>
                                                                             &nbsp
-                                                                             <a href=detail-surat-keluar.html
+                                                                             <a href=detail-surat-keluar.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
-                                                                            &nbsp
-                                                                             <a href=detail-surat-keluar.html
-                                                                            <button type="button" class="btn-info">Kirim</button></a>
                                                                         </td>
                                                                             </tr>
                                                                             <tr>
@@ -306,17 +303,14 @@
                                                                                 <td>SR-132</td>
                                                                                 <td>6 Oktober 2021</td>
                                                                                 <td>Tokopedia</td>
-                                                                                <td><a href=update-surat-keluar.html
+                                                                                <td><a href=update-surat-keluar.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
-                                                                        <a href=surat-keluar.html
+                                                                        <a href=surat-keluar.html>
                                                                             <button type="button" class="btn-danger">Hapus</button></a>
                                                                             &nbsp
-                                                                             <a href=detail-surat-keluar.html
+                                                                             <a href=detail-surat-keluar.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
-                                                                            &nbsp
-                                                                             <a href=detail-surat-keluar.html
-                                                                            <button type="button" class="btn-info">Kirim</button></a>
                                                                             </tr>
                                                                         </tbody>
                                                                     </table>
