--- a/admin/surat-masuk.html
+++ b/admin/surat-masuk.html
@@ -268,7 +268,7 @@
                                                         <div class="float-left">
                                                             <p>
                                                                 <a href=form-add-disposisi.html>
-                                                                    <button type="button" class="btn btn-info btn-sm">+ Disposisi</button></p>
+                                                                    <button type="button" class="btn btn-info btn-sm">Tambah Disposisi</button></p>
                                                                 </a>
                                                             </div>
                                                                 <!-- <table class="table"> -->
@@ -303,8 +303,6 @@
                                                                             <button type="button" class="btn-warning">Detail</button></a>
                                                                         </td>
                                                                         <td><a href="" class="fa fa-check"></a>
-                                                                            &nbsp
-                                                                            <a href="" class="fa fa-times"></a>
                                                                         </td>
                                                                         </tr>
                                                                         <tr>
@@ -323,8 +321,6 @@
                                                                             <button type="button" class="btn-warning">Detail</button></a>
                                                                         </td>
                                                                         <td><a href="" class="fa fa-check"></a>
-                                                                            &nbsp
-                                                                            <a href="" class="fa fa-times"></a>
                                                                         </td>
                                                                         </tr>
                                                                         <tr>
@@ -340,8 +336,7 @@
                                                                             <button type="button" class="btn-danger">Hapus</button></a>&nbsp
                                                                             <a href=detail-surat-masuk.html>
                                                                             <button type="button" class="btn-warning">Detail</button></a>
-                                                                            <td><a href="" class="fa fa-check"></a>
-                                                                            &nbsp
+                                                                            <td>
                                                                             <a href="" class="fa fa-times"></a>
                                                                         </td>
                                                                         </tr>
@@ -361,8 +356,6 @@
                                                                             <button type="button" class="btn-warning">Detail</button></a>
                                                                         </td>
                                                                         <td><a href="" class="fa fa-check"></a>
-                                                                            &nbsp
-                                                                            <a href="" class="fa fa-times"></a>
                                                                         </td>
                                                                         </tr>
                                                                     </tbody>
