--- a/admin/update-data-arsip.html
+++ b/admin/update-data-arsip.html
@@ -71,7 +71,8 @@
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
-                                <!-- <li><a href="surat-keluar.html">Surat Keluar</a></li> -->
+                                <li><a href="surat-keluar.html">Surat Keluar</a></li>
+                                <li><a href="disposisi.html">Disposisi</a></li>
                             </ul>
                         </li>
 
