--- a/admin/update-surat-keluar.html
+++ b/admin/update-surat-keluar.html
@@ -73,7 +73,7 @@
                                 <ul class="list-unstyled">
                                     <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                     <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                    <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
+                                    <li><a href="disposisi.html">Disposisi</a></li>
                                 </ul>
                             </li>
 
@@ -262,13 +262,13 @@
                                                 <div class="form-group row">
                                                     <label for="example-number-input" class="col-sm-2 col-form-label">No. Surat</label>
                                                     <div class="col-sm-5">
-                                                        <input class="form-control" type="number" value="SR-131" id="example-number-input">
+                                                        <input class="form-control" type="varchar" value="SR-131" id="example-number-input">
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <label for="example-date-input" class="col-sm-2 col-form-label">Tanggal Surat</label>
                                                     <div class="col-sm-5">
-                                                        <input class="form-control" type="date" value="05 Oktober 2021" id="example-date-input">
+                                                        <input class="form-control" type="date" value="2011-10-05" id="example-date-input">
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
