--- a/admin/update-surat-masuk.html
+++ b/admin/update-surat-masuk.html
@@ -72,7 +72,7 @@
                                     <ul class="list-unstyled">
                                         <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                         <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                        <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
+                                        <li><a href="disposisi.html">Disposisi</a></li>
                                     </ul>
                                 </li>
 
@@ -261,7 +261,7 @@
                                                         <div class="form-group row">
                                                             <label for="example-number-input" class="col-sm-2 col-form-label">No. Surat</label>
                                                             <div class="col-sm-5">
-                                                                <input class="form-control" type="number" value="121" id="example-number-input">
+                                                                <input class="form-control" type="varchar" value="SR-121" id="example-number-input">
                                                             </div>
                                                         </div>
                                                         <div class="form-group row">
@@ -282,16 +282,6 @@
                                                                 <input class="form-control" type="text" value="Politeknik Negeri Jember" id="example-text-input">
                                                             </div>
                                                         </div>
-                                                        <div class="form-group row">
-                                                        <label for="example-date-input" class="col-sm-2 col-form-label">Ditujukan Kepada</label>
-                                                        <div class="col-sm-5">
-                                                            <select class="form-control" name="Role">
-                                                            <option value=""hidden disabled selected>Divisi HRD</option>
-                                                            <option value="marketing">Marketing</option>
-                                                            <option value="hrd">HRD</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
                                                         <div class="form-group row">
                                                             <label for="example-text-input" class="col-sm-2 col-form-label">Perihal</label>
                                                             <div class="col-sm-5">
