--- a/pimpinan/dashboard.html
+++ b/pimpinan/dashboard.html
@@ -307,7 +307,7 @@
                                 <div class="col-md-12 col-xl-4">
                                     <div class="card">
                                         <div class="card-body">
-                                            <h4 class="mt-0 mb-3 header-title">Arsip</h4> 
+                                            <h4 class="mt-0 mb-3 header-title">Surat Masuk</h4> 
                                             <div id="morris-donut-example" style="height: 340px;"></div>
                                         </div>
                                     </div>
