--- a/resepsionis/dashboard.html
+++ b/resepsionis/dashboard.html
@@ -256,23 +256,22 @@
                                         </div>
                                     </div>
                                 </div>
-
                                 <div class="col-md-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-tag-text-outline"></i>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-12 col-xl-3">
-                                    <div class="card mini-stat">
-                                        <div class="mini-stat-icon text-right">
-                                            <i class="mdi mdi-tag-text-outline"></i>
+                                            <i class="mdi mdi-book-open"></i>
                                         </div>
                                         <div class="p-4">
                                             <h6 class="text-uppercase mb-3">Data Arsip</h6>
                                             <h4 class="mb-0">9<small class="ml-2"></small></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-xl-8">
+                                    <div class="card">
+                                        <div class="card-body">   
+                                            <h4 class="mt-0 mb-3 header-title">Dokumen</h4>        
+                                            <div id="morris-area-chart" style="height: 340px;"></div>
                                         </div>
                                     </div>
                                 </div>
